# livekit-sdk-cpp

./: CMakeLists.txt  CMakeLists.txt.orig  client-sdk-rust.rej  flake.nix
examples/simple_room/: main.cpp
include/livekit/: ffi_client.h  participant.h  room.h  track.h  video_frame.h  video_source.h
src/: ffi_client.cpp  participant.cpp  room.cpp  track.cpp  video_frame.cpp  video_source.cpp
